linked bundle with non-static url

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <body>
     <div class="container"></div>
   </body>
-  <script src="http://www.d2dev.io/carpages/bundle.js"></script>
+  <script src="/bundle.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuEfpo06lWC9xWW9Qgc6xoaVWr5d9Sa3k&callback=initMap" async defer></script>
   <script>
       //GoogleMaps says Parkdale East Auto is at: 43.238506, -79.791545
